styles.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");

* {
  box-sizing: border-box;
}

/* Custom Scrollbar */
/* width */
::-webkit-scrollbar {
  width: 10px;
}
/* Track */
::-webkit-scrollbar-track {
  background: #f1f1f1;
}
/* Handle */
::-webkit-scrollbar-thumb {
  background: #888;
}
/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #555;
}

body {
  font-family: "Poppins", sans-serif;
  background-color: #282828;
  color: white;
  margin: 0;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  text-align: center;
  height: 100vh;
  margin: 0 1.5rem;
  overflow: hidden;
}
.container {
  display: flex;
  flex-direction: column;
}
.btn {
  background: linear-gradient(90deg, rgb(245, 51, 132), rgb(194, 65, 211));
  border-radius: 500px;
  border: none;
  color: #f1f1f1;
  margin: 1rem;
  padding: 0.5rem 2.5rem;
  font-size: 1.2rem;
  font-family: inherit;
  cursor: pointer;
}
.btn:active {
  transform: scale(1.05);
}
.btn:hover {
  box-shadow: 0 2px 5px rgba(255, 255, 255, 0.3);
}

